
 History

 __.__.____: v5.82
 - JemmEx: minor adjustment to always keep monitor stack dword-aligned.
 - fixed: MOVEXBDA option didn't check that XBDA was adjacent to conv. mem.

 12.04.2022: v5.81
 - JemmEx: XMS extension v3.51 (super-extended block moves) implemented.

 18.06.2021: v5.80
 - for exceptions other than page faults, the monitor will display register
   CR4 instead of CR2, if it exists.
 - Jemm might have reduced last MCB by 16 byte when loaded while UMBs
   where already available and used by DOS.
 - Jemm does again scan the region C000-EFFF for RAM. This avoids
   a system crash if upper memory has been supplied by UMBPCI and is
   used by DOS.
 - new option MOVEXBDA for Jemm implemented.
 - JemmEx will recognize memory blocks activated by UMBPCI and include them
   into its UMB pool. Makes option S=start-end virtually obsolete.
 - a warning is displayed if the extended memory block where Jemm386 will
   reside is beyond the 16MB limit.
 - strategy to realloc an EMB to increase its size has been changed and is
   now smart enough to check if the block can be increased without moving
   it.
 - UMBM no longer requires the /I parameter; it will scan for blocks with
   the UMBPCI signature.
 - UMBM has new option /XBDA.
 - UMBM now acts gracefully if line DOS=UMB is missing in CONFIG.SYS.
 - MOVEXBDA has got option /A to make it align the new XBDA to a kB boundary.
 - tool CPUSTAT split into CPUSTAT and CPUID.
 - emulation of Int 15h, ah=87 (move extended memory) has been enhanced
   to allow to access physical memory beyond the 4 GB border via PSE-36.
 - JemmEx XMM now implements XMS v3.5 (extended memory > 4 GB). Default XMS
   handles changed to 48 (previously 32). Added MAXSEXT option for JemmEx,
   and also added JemmExL.exe, that still supports XMS v3.0 only.
 - JemmEx: return DX=0 if XMS alloc functions fail (XMS spec).
 - option I=TEST does now indeed what's documented. Previously it only